# GroupMe_Anti-Spam_Bot

./: .gitignore  .vercelignore  CORS_FIX_SUMMARY.md  DATA_COLLECTION_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  LOCAL_SETUP.md  Makefile  README.md  SPAM_DETECTOR_GUIDE.md  auto_spam_detector.py  clean_data.py  collect_data.py  deploy-ecs.sh  deploy-lambda-clean.sh  ec2-health-check.py  ec2-health-server.py  ec2-requirements.txt  env.example  fix-cors.sh  lambda-execution-policy.json  manage_platform.sh  pyproject.toml  quick-start.sh  requirements.txt  response.json  retrain_model.py  setup-api-gateway.sh  setup-frontend.sh  spamshield-platform.service  test-payload.json  train.py  vercel.json
api/: Dockerfile  Dockerfile.lambda  Dockerfile.lambda.simple  Dockerfile.minimal  Dockerfile.test  gunicorn.conf.py  lambda_function.py  lambda_function_comprehensive.py  lambda_function_status_only.py  lambda_function_with_prediction.py.backup  prediction_server.py  requirements.txt  test-lambda.py  test-minimal.py  wsgi.py
api-predict/: Dockerfile  build.sh  lambda_function.py  requirements.txt
deploy/: AWS-API-DEPLOYMENT.md  DNS-SETUP.md  QUICK-DEPLOY.md  api-deploy.sh  aws-deploy.sh  aws-ec2-guide.md  build-and-deploy.sh  ec2-deploy.sh  ec2-setup.sh  nginx-config.sh  vercel-deploy.sh
groupme_bot/: __init__.py  cli.py
spamshield-frontend/: .env.local  .npmrc  README.md  package-lock.json  package.json
spamshield_platform/: Dockerfile  README.md  config.env.example  docker-compose.yml  main.py  requirements.txt  start.sh
src/: __init__.py
src/bot/: spam_monitor.py  (+2 more)
(+64 files in other folders)
